--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                     <nav class="nav header__nav">
                         <ul class="nav__list">
                             <li class="nav__item">
-                                <a href="#" class="nav__link">About </a>
+                                <a href="video.html" class="nav__link"
+                                    >video
+                                </a>
                             </li>
                             <li class="nav__item">
                                 <a href="#advantages" class="nav__link"
@@ -254,7 +256,7 @@
                 <div class="container">
                     <ul class="footer__list">
                         <li class="footer__item">
-                            <a href="#" class="footer__link">About </a>
+                            <a href="video.html" class="footer__link">video </a>
                         </li>
                         <li class="footer__item">
                             <a href="#advantages" class="footer__link"
